--- a/src/View/department/list.phtml
+++ b/src/View/department/list.phtml
@@ -10,54 +10,20 @@
             </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Nome do Departamento</td>
-            <td>Descrição...</td>
-            <td>
-              <a href="#" class="btn btn-sm btn-warning">Editar</a>
-              <a href="#" class="btn btn-sm btn-danger">Excluir</a>
-            </td>
-          </tr>
-          <tr>
-            <td>Nome do Departamento</td>
-            <td>Descrição...</td>
-            <td>
-              <a href="#" class="btn btn-sm btn-warning">Editar</a>
-              <a href="#" class="btn btn-sm btn-danger">Excluir</a>
-            </td>
-          </tr>
-          <tr>
-            <td>Nome do Departamento</td>
-            <td>Descrição...</td>
-            <td>
-              <a href="#" class="btn btn-sm btn-warning">Editar</a>
-              <a href="#" class="btn btn-sm btn-danger">Excluir</a>
-            </td>
-          </tr>
-          <tr>
-            <td>Nome do Departamento</td>
-            <td>Descrição...</td>
-            <td>
-              <a href="#" class="btn btn-sm btn-warning">Editar</a>
-              <a href="#" class="btn btn-sm btn-danger">Excluir</a>
-            </td>
-          </tr>
-          <tr>
-            <td>Nome do Departamento</td>
-            <td>Descrição...</td>
-            <td>
-              <a href="#" class="btn btn-sm btn-warning">Editar</a>
-              <a href="#" class="btn btn-sm btn-danger">Excluir</a>
-            </td>
-          </tr>
-          <tr>
-            <td>Nome do Departamento</td>
-            <td>Descrição...</td>
-            <td>
-              <a href="#" class="btn btn-sm btn-warning">Editar</a>
-              <a href="#" class="btn btn-sm btn-danger">Excluir</a>
-            </td>
-          </tr>
+          <?php
+            foreach ($this->data['departments'] as $department) {
+                echo "
+                    <tr>
+                        <td>{$department->getName()}</td>
+                        <td>{$department->getDescription()}</td>
+                        <td>
+                          <a href=\"#\" class=\"btn btn-sm btn-warning\">Editar</a>
+                          <a href=\"#\" class=\"btn btn-sm btn-danger\">Excluir</a>
+                        </td>
+                    </tr>
+                ";
+            }
+          ?>
         </tbody>
       </table>
     </div>
