Crud de Departamentos

--- a/src/View/template/logged.phtml
+++ b/src/View/template/logged.phtml
@@ -60,6 +60,14 @@
               
               unset($_SESSION['errors']);
           }
+
+        if (isset($_SESSION['success'])) {
+            foreach ($_SESSION['success'] as $success) {
+                echo "<div class='alert alert-success'>{$success}</div>";
+            }
+
+            unset($_SESSION['success']);
+        }
         ?>
       </div>
     </div>
