--- a/src/View/department/list.phtml
+++ b/src/View/department/list.phtml
@@ -1,6 +1,12 @@
 <div class="row mt-5">
   <div class="col-md-12">
     <div class="card card-body">
+      <div class="text-right mb-3">
+          <a target="_blank" href="/admin/departamentos/pdf" class="btn btn-outline-dark">
+              Gerar PDF
+          </a>
+      </div>
+        
       <table class="table table-hover table-striped">
         <thead class="thead-dark">
             <tr>
@@ -17,8 +23,8 @@
                         <td>{$department->getName()}</td>
                         <td>{$department->getDescription()}</td>
                         <td>
-                          <a href=\"#\" class=\"btn btn-sm btn-warning\">Editar</a>
-                          <a href=\"#\" class=\"btn btn-sm btn-danger\">Excluir</a>
+                          <a href='/admin/editar-departamento?id={$department->getId()}' class=\"btn btn-sm btn-warning\">Editar</a>
+                          <a href='/admin/excluir-departamento?id={$department->getId()}' class=\"btn btn-sm btn-danger\">Excluir</a>
                         </td>
                     </tr>
                 ";
