--- a/src/View/index/index.phtml
+++ b/src/View/index/index.phtml
@@ -10,7 +10,7 @@
   </div>
 
   <div class="col-md-4 col-xs-12 bg-dark">
-    <form class="mt-5 text-white">
+    <form class="mt-5 text-white" action="/login" method="post">
       <label for="email" class="mt-3">Email</label>
       <input type="email" id="email" name="email" class="form-control form-control-lg" placeholder="chiquim@email.com" required>
       <br>
